# dejaview

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  __main__.py  pyproject.toml
.circleci/: config.yml
.github/: copilot-instructions.md
counting/: counting.py  dejaview.py  demo.cast  main.py
counting/tests/: test_step_back.py
dejaview/: __main__.py
dejaview-extension/: .vscodeignore  LICENSE.md  README.md  package-lock.json  package.json  tsconfig.json
dejaview-extension/src/: adapter.ts  extension.ts
dejaview-extension/src/test/: extension.test.ts
dejaview/_memory_patch/: __init__.pyi
dejaview/counting/: counting.py  dejaview.py  error_detection.py  main.py  socket_client.py
dejaview/counting/tests/: test_step_back.py
dejaview/patching/: backdoor.py  custom_patchers.py  patcher.py  patching.py  setup.py  state_store.py  util.py
dejaview/snapshots/: safe_fork.py  snapshots.py
dejaview/snapshots/tests/: __init__.py  test_multiple_snapshots.py
dejaview/tests/: test_basic.py  test_black.py  test_datetime_patching.py  test_error_detection.py  test_getpass_patching.py  test_http_server.py  test_io_patching.py  test_os_patching.py  test_patch.py  test_reverse.py  test_socket_patching.py  test_subprocess_patching.py  test_tempfile_patching.py  test_urllib_patching.py  util.py
dejaview/tests/programs/: binary_search.py  http_server.py  test.py
dejaview/tests/programs/count_tests/: count_tests.py  driver.py
djv-test/: .gitignore  CHANGELOG.md  README.md  package-lock.json  package.json
djv-test/src/: adapter.ts  extension.ts
docs/: patching.md
patching/: patcher.py  patching.py  setup.py  state_store.py
snapshots/: __init__.py  snapshots.py
src/: lib.rs
test/black/: debug_black.sh  debug_black_test.sh  get_black.sh  test.py
tests/: test.py
tests/test_socket/: client.py  server.py
