[project]
name = "dejaview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["tblib>=3.2.2"]

[tool.pytest.ini_options]
testpaths = ["dejaview"]
# Some tests such as test_black are grouped to prevent race conditions
addopts = "--dist=loadgroup"

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pexpect>=4.9.0",
    "pytest>=8.4.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.3",
]

[build-system]
requires = ["maturin>=1.11.5,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "dejaview._memory_patch"

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "**/*.rs" },
]

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"

[tool.ruff.lint]
# Add the `line-too-long` rule to the enforced rule set. By default, Ruff omits rules that
# overlap with the use of a formatter, like Black, but we can override this behavior by
# explicitly adding the rule.
select = ["E", "F", "W", "A", "PLC", "PLE", "PLW", "I", "TID"]

[tool.ruff]
extend-exclude = ["dejaview/tests/programs", "test/black"]

[tool.mypy]
exclude = ["^dejaview/tests/programs/", "^test/black/"]
check_untyped_defs = true
